<resources>
    <string name="app_name">Wifi Attendance</string>
    <string name="title_login_activity">Login</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="welcome">"Welcome! "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_registration">Registration</string>
    <string name="form_name">Name</string>
    <string name="form_phone">Phone No</string>
    <string name="form_take_attendance">Take Attendance</string>
    <!-- Strings related to registration tab    -->
    <string name="registration_tab_text_1">Student</string>
    <string name="registration_tab_text_2">Teacher</string>
    <!-- Strings related to registration form -->
    <string name="form_insti_name">Institute</string>
    <string name="form_dep_name">Department</string>
    <string name="form_roll_no">Roll No</string>
    <string name="title_activity_courses">Analytics</string>
    <string name="form_course_id">Course Id</string>
    <string name="form_sem">Semester</string>
    <string name="form_slot">Slot</string>
    <string name="form_attend_btn">Mark attendance</string>
    <string name="form_attend_btn_stop">Complete attendance Process</string>
    <string name="form_attend_btn_recording">Recording Attendance</string>
    <string name="form_req_approval">Request Approval</string>
    <string name="form_create_course">Add course</string>
    <string name="registration_successful">User registered successfully</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"
    </string>
    <string name="title_activity_student_dashboard">Mark Attendance</string>
    <string name="title_add_course">Register for a Course</string>
    <string name="title_create_course">Create a Course</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="ongoing_attendance">Taking Attendance...</string>
    <!-- Menu items -->
    <string name="action_settings">Settings</string>
    <string name="action_analytics">Analytics</string>
    <string name="action_logout">Log Out</string>
    <string name="action_refresh">Refresh</string>
</resources>